# RustWalletCracker

./: Cargo.toml  README.md  api.rs  api.txt  main.rs
wallet_cracker/: Cargo.toml
wallet_cracker/src/: ethereum_keys.db  ethereum_keys.db-journal  main.rs
