[package]
name = "wallet_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]  }
web3 = { version = "0.18", default-features = false }
rusqlite = "0.29"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.103"